--- a/UploadAndAnnotateImages/force-app/main/default/lwc/loadingSpinner/loadingSpinner.html
+++ b/UploadAndAnnotateImages/force-app/main/default/lwc/loadingSpinner/loadingSpinner.html
@@ -1,12 +1,15 @@
 <template>
-    <div class="slds-spinner_container slds-is-fixed spinner-bg">
-		<div role="status" class="slds-spinner slds-spinner_medium slds-spinner_inverse">
-			<span class="slds-assistive-text">Loading</span>
-			<div class="slds-spinner__dot-a"></div>
-			<div class="slds-spinner__dot-b"></div>
-		</div>
-		<div class="spinner-text">
-			<span>{loadingMessage}</span>
-		</div>
-	</div>
+  <div class="slds-spinner_container slds-is-fixed spinner-bg">
+    <div
+      role="status"
+      class="slds-spinner slds-spinner_medium slds-spinner_inverse"
+    >
+      <span class="slds-assistive-text">Loading</span>
+      <div class="slds-spinner__dot-a"></div>
+      <div class="slds-spinner__dot-b"></div>
+    </div>
+    <div class="spinner-text">
+      <span>{loadingMessage}</span>
+    </div>
+  </div>
 </template>
