--- a/FollowUpAppointment/force-app/main/default/lwc/followUpAppointmentMain/followUpAppointmentMain.html
+++ b/FollowUpAppointment/force-app/main/default/lwc/followUpAppointmentMain/followUpAppointmentMain.html
@@ -25,7 +25,7 @@
                     <p hidden={hideCustomPage1} class="mainTitle">{headerCustomPage1}</p>
                     <p hidden={hideCustomPage2} class="mainTitle">{headerCustomPage2}</p>
                     <p hidden={hideCustomPage3} class="mainTitle">{headerCustomPage3}</p>
-                    <p hidden={hideSlotsPage} class="mainTitle">{headerSlotsPage}</p>
+                    <p hidden={hideCustomPage4} class="mainTitle">{headerSlotsPage}</p>
                     <p class="stepsTitle">{LABELS.FollowUpAppointments_StepTitle1} {currentStepNumber} {LABELS.FollowUpAppointments_StepTitle2} {maxStepNumber}</p>
                 </span>
             </lightning-layout-item>
@@ -101,7 +101,7 @@
         <!-- Next Button -->
 
         <!-- Slots Component  -->
-        <template if:false={hideSlotsPage}>
+        <template if:false={hideCustomPage4}>
             <c-mobile-appointment-booking-landing
                 contact-name={settings.contactName}
                 new-record-number={newRecordNumber}
