--- a/RescheduleAppointments/force-app/main/default/lwc/mobileAppointmentBookingCompactAppointmentInfo/mobileAppointmentBookingCompactAppointmentInfo.html
+++ b/RescheduleAppointments/force-app/main/default/lwc/mobileAppointmentBookingCompactAppointmentInfo/mobileAppointmentBookingCompactAppointmentInfo.html
@@ -1,11 +1,13 @@
 <template>
-    <div class="container">
-        <div class="title">{LABELS.Reschedule_Appointment_current_appointment_title}</div>
-        <div class="separator"></div>
-        <div class="info">
-            <div class="info-emph">{workTypeName}</div>
-            <div class="info-date">{appointmentDateTime}</div>
-            <div class="secondary-title">{appointmentNumber}</div>
-        </div>
-    </div>   
+  <div class="container">
+    <div class="title">
+      {LABELS.Reschedule_Appointment_current_appointment_title}
+    </div>
+    <div class="separator"></div>
+    <div class="info">
+      <div class="info-emph appointment-worktype">{workTypeName}</div>
+      <div class="info-date appointment-time">{appointmentDateTime}</div>
+      <div class="secondary-title appointment-number">{appointmentNumber}</div>
+    </div>
+  </div>
 </template>
