--- a/RescheduleAppointments/force-app/main/default/lwc/mobileAppointmentBookingLanding/mobileAppointmentBookingLanding.html
+++ b/RescheduleAppointments/force-app/main/default/lwc/mobileAppointmentBookingLanding/mobileAppointmentBookingLanding.html
@@ -1,44 +1,49 @@
 <template>
-    <div class="landing-container">
-        <div class="landing-section">
-            <c-mobile-appointment-booking-compact-appointment-info
-                assign-to-name={assignToName}
-                compact-info-obj={compactInfoObj}>
-            </c-mobile-appointment-booking-compact-appointment-info>
-        </div>       
-        <div class="landing-section">
-            <c-mobile-appointment-booking-scheduling-container
-                show-exact-arrival-time = {showExactArrivalTime} 
-                service-appointment-object = {currentAppointmentData}
-                oneventname = {onButtonClick}
-                show-no-of-days-before-after-week = {noOfDaysBeforeAfterWeek}
-                service-resource-obj = {serviceResourceObject}
-                time-slot-object = {timeSlotDateWise}
-                ondateselection = {onDateSelected}
-                ongetslotexecuted = {handleGetSlotQueryForSelectedDate}
-                selected-date = {selectedDate}
-                max-valid-date = {maxValidCalendarDate}
-                schedule-policy = {schedulingPolicyId}
-                onserviceappointmentupdate = {onServiceAppointmentUpdate}
-                show-data-spinner = {showSpinnerInChildClass} 
-                page-title = ""
-                worktype-displayname=""
-                recommended-score={recommendedScore}
-                current-assignment-method={currentAssignmentMethod}
-                user-id={userId}
-                is-excluded={isExcluded}
-                user-name={userName}
-                assign-to-name={assignToName}
-                show-mobile-worker-choice={showMobileWorkerChoice}>
-            </c-mobile-appointment-booking-scheduling-container>
-        </div>
-        <!-- SPINNER -->
-        <template if:true={showDataSpinner}>
-            <div class="slds-is-relative">
-                <lightning-spinner alternativetext="Loading" variant="brand" size="large">
-                </lightning-spinner>
-            </div>
-        </template>            
-         <!-- SPINNER -->
-    </div>  
+  <div class="landing-container">
+    <div class="landing-section">
+      <c-mobile-appointment-booking-compact-appointment-info
+        compact-info-obj={compactInfoObj}
+      >
+      </c-mobile-appointment-booking-compact-appointment-info>
+    </div>
+    <div class="landing-section">
+      <c-mobile-appointment-booking-scheduling-container
+        show-exact-arrival-time={showExactArrivalTime}
+        service-appointment-object={currentAppointmentData}
+        oneventname={onButtonClick}
+        show-no-of-days-before-after-week={noOfDaysBeforeAfterWeek}
+        service-resource-obj={serviceResourceObject}
+        time-slot-object={timeSlotDateWise}
+        ondateselection={onDateSelected}
+        ongetslotexecuted={handleGetSlotQueryForSelectedDate}
+        selected-date={selectedDate}
+        max-valid-date={maxValidCalendarDate}
+        schedule-policy={schedulingPolicyId}
+        onserviceappointmentupdate={onServiceAppointmentUpdate}
+        show-data-spinner={showSpinnerInChildClass}
+        page-title=""
+        worktype-displayname=""
+        recommended-score={recommendedScore}
+        current-assignment-method={currentAssignmentMethod}
+        user-id={userId}
+        is-excluded={isExcluded}
+        user-name={userName}
+        assign-to-name={assignToName}
+        show-mobile-worker-choice={showMobileWorkerChoice}
+      >
+      </c-mobile-appointment-booking-scheduling-container>
+    </div>
+    <!-- SPINNER -->
+    <template if:true={showDataSpinner}>
+      <div class="slds-is-relative">
+        <lightning-spinner
+          alternativetext="Loading"
+          variant="brand"
+          size="large"
+        >
+        </lightning-spinner>
+      </div>
+    </template>
+    <!-- SPINNER -->
+  </div>
 </template>
