set lightning-input type as text when field type not supported

--- a/MobileDashboard/force-app/main/default/lwc/basicFilter/basicFilter.html
+++ b/MobileDashboard/force-app/main/default/lwc/basicFilter/basicFilter.html
@@ -44,7 +44,7 @@
             <template if:true={isFieldTypeRegular}>
                 <lightning-input
                     class="value-input"
-                    type={filterFieldType}
+                    type={valueFieldType}
                     label={fieldInputLabel}
                     value={filterValue}
                     onchange={onFilterValueChange}
