add service document sample codes

--- a/ServiceDocumentSampleComponents/staticImage/staticImage.html
+++ b/ServiceDocumentSampleComponents/staticImage/staticImage.html
@@ -1,7 +1,7 @@
 <template>
   <div>
     <div class="image" style={inlineStyle}>
-      <img src="{salesforceUrl}" />
+      <img src={salesforceUrl} />
     </div>
   </div>
 </template>
