--- a/ServiceDocumentSampleComponents/bodyText/bodyText.html
+++ b/ServiceDocumentSampleComponents/bodyText/bodyText.html
@@ -1,3 +1,3 @@
 <template>
-  <p><lightning-formatted-text value="{text}"></lightning-formatted-text></p>
+  <p><lightning-formatted-text value={text}></lightning-formatted-text></p>
 </template>
