--- a/ServiceDocumentSampleComponents/force-app/main/default/lwc/demoWorkPlan/demoWorkPlan.html
+++ b/ServiceDocumentSampleComponents/force-app/main/default/lwc/demoWorkPlan/demoWorkPlan.html
@@ -1,6 +1,8 @@
 <template>
   <div class="slds-box slds-var-m-top_medium">
-    <h3 class="slds-text-heading_medium slds-var-m-bottom_small">{workPlanRecord.Name.value}</h3>
+    <h3 class="slds-text-heading_medium slds-var-m-bottom_small">
+      {workPlanRecord.Name.value}
+    </h3>
     <p class="slds-var-p-bottom_small">{workPlanRecord.Description.value}</p>
 
     <h4 class="slds-text-heading_small slds-var-p-bottom_medium">Work Steps</h4>
@@ -15,10 +17,10 @@
         </tr>
       </thead>
       <tbody>
-        <template for:each="{_workStepRecords}" for:item="workStepRecord">
+        <template for:each={_workStepRecords} for:item="workStepRecord">
           <c-demo-work-step-presentation
-            key="{workStepRecord.node.Id}"
-            work-step-record="{workStepRecord}"
+            key={workStepRecord.node.Id}
+            work-step-record={workStepRecord}
           ></c-demo-work-step-presentation>
         </template>
       </tbody>
