--- a/ServiceDocumentSampleComponents/force-app/main/default/lwc/mediumHeaderText/mediumHeaderText.html
+++ b/ServiceDocumentSampleComponents/force-app/main/default/lwc/mediumHeaderText/mediumHeaderText.html
@@ -1,3 +1,3 @@
 <template>
-  <h2 class="slds-text-heading_medium" style="{inlineStyle}">{text}</h2>
+  <h2 class="slds-text-heading_medium" style={inlineStyle}>{text}</h2>
 </template>
