replace svg image with actual component + localization

--- a/projects/MobileDashboard/force-app/main/default/lwc/editCardModal/editCardModal.html
+++ b/projects/MobileDashboard/force-app/main/default/lwc/editCardModal/editCardModal.html
@@ -131,14 +131,10 @@
                     LABELS.MobileDashboard_card_modal_design_tab_layout_side_description
                     }
                   </p>
-                  <svg
-                    xmlns="http://www.w3.org/2000/svg"
-                    width="342"
-                    height="216"
-                  >
-                    ;
-                    <use xlink:href={side_svg_url}></use>
-                  </svg>
+                  <c-summary-component
+                      settings={sideExampleSettings}
+                      demo-mode="true">
+                  </c-summary-component>
                 </div>
                 <div class="layout-radio">
                   <lightning-input
@@ -155,14 +151,10 @@
                     LABELS.MobileDashboard_card_modal_design_tab_layout_stack_description
                     }
                   </p>
-                  <svg
-                    xmlns="http://www.w3.org/2000/svg"
-                    width="343"
-                    height="280"
-                  >
-                    ;
-                    <use xlink:href={stack_svg_url}></use>
-                  </svg>
+                  <c-summary-component
+                    settings={stackExampleSettings}
+                    demo-mode="true">
+                  </c-summary-component>
                 </div>
               </div>
             </div>
