--- a/projects/MobileDashboard/force-app/main/default/lwc/subFilterCard/subFilterCard.html
+++ b/projects/MobileDashboard/force-app/main/default/lwc/subFilterCard/subFilterCard.html
@@ -55,7 +55,7 @@
             </lightning-input>
           </div>
         </div>
-        <div class="preview" style="max-width: 200px">
+        <div class="preview">
           <label class="slds-form-element__label">
             { LABELS.MobileDashboard_preview_title }
             <lightning-helptext
