fix prettier errors

--- a/projects/MobileDashboard/force-app/main/default/lwc/editCardModal/editCardModal.html
+++ b/projects/MobileDashboard/force-app/main/default/lwc/editCardModal/editCardModal.html
@@ -132,8 +132,9 @@
                     }
                   </p>
                   <c-summary-component
-                      settings={sideExampleSettings}
-                      demo-mode="true">
+                    settings={sideExampleSettings}
+                    demo-mode="true"
+                  >
                   </c-summary-component>
                 </div>
                 <div class="layout-radio">
@@ -153,7 +154,8 @@
                   </p>
                   <c-summary-component
                     settings={stackExampleSettings}
-                    demo-mode="true">
+                    demo-mode="true"
+                  >
                   </c-summary-component>
                 </div>
               </div>
